<resources>
    <string name="app_name">Notes Surface</string>
    <string name="notes">My Notes</string>
    <string name="notes_title">Title</string>
    <string name="notes_sub_title">Sub Title</string>
    <string name="notes_desc">Note</string>
    <string name="web_url">Enter URL</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete_image">Delete Image</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>