<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <View
        android:id="@+id/colorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="-145dp"
        tools:layout_editor_absoluteY="191dp" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorBlack" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorBlack" />


    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:hint="@string/notes_title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorBlack"
        android:textColorHint="@color/ColorDarkGray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle">



        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp" />

    </RelativeLayout>

    <Button
        android:id="@+id/imgDelete"
        android:layout_width="51dp"
        android:layout_height="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@null"
        android:text="@string/delete_image"
        android:textColor="@color/ColorDarkGray"
        android:textSize="@dimen/_8sdp"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        android:visibility="gone"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteDesc"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/ColorBlack"
                android:textColorHint="@color/ColorDarkGray"
                android:textSize="@dimen/_12ssp" />
<!--            <ImageView-->
<!--                android:id="@+id/imgUrlDelete"-->
<!--                android:layout_width="@dimen/_24sdp"-->
<!--                android:layout_height="@dimen/_24sdp"-->
<!--                android:visibility="gone"-->
<!--                android:src="@drawable/ic_baseline_cancel_24" />-->
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@null"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/ColorDarkGray"
                android:id="@+id/btnCancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@null"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/ColorDarkGray"
                android:id="@+id/btnOk"/>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:visibility="gone"
        android:fontFamily="@font/manrope_bold"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorBlack"
        android:textColorHint="@color/ColorDarkGray"
        android:textSize="@dimen/_12ssp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

    <EditText
        android:id="@+id/etNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorBlack"
        android:textColorHint="@color/ColorDarkGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgDelete" />

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:background="@color/ColorWhite"
        android:textAllCaps="false"
        android:padding="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/ColorDarkGray"
        android:text="Press to Speak"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteDesc"/>

<!--    <TextView-->
<!--        android:id="@+id/tvSpeechToText"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_10sdp"-->
<!--        android:layout_marginTop="@dimen/_5sdp"-->
<!--        android:layout_marginEnd="@dimen/_10sdp"-->
<!--        android:layout_marginBottom="@dimen/_5sdp"-->
<!--        android:ellipsize="end"-->
<!--        android:visibility="gone"-->
<!--        android:fontFamily="@font/manrope_bold"-->
<!--        android:padding="@dimen/_10sdp"-->
<!--        android:textColor="@color/ColorBlack"-->
<!--        android:textColorHint="@color/ColorDarkGray"-->
<!--        android:textSize="@dimen/_12ssp"-->
<!--        android:autoLink="web"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imgDelete" />-->

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_13sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/ColorDarkGray"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom" />

    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/ic_add"
            app:tint="@color/ColorDarkGray" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>